// <auto-generated />
using System;
using System.Collections.Generic;
using Microsoft.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore.Infrastructure;
using Microsoft.EntityFrameworkCore.Migrations;
using Microsoft.EntityFrameworkCore.Storage.ValueConversion;
using Npgsql.EntityFrameworkCore.PostgreSQL.Metadata;
using Project.Modules.Portfolio.Infrastructure.Database;

#nullable disable

namespace Project.Modules.Portfolio.Infrastructure.Migrations
{
    [DbContext(typeof(PortfolioDbContext))]
    [Migration("20260711060841_AddStrategyTemplates")]
    partial class AddStrategyTemplates
    {
        /// <inheritdoc />
        protected override void BuildTargetModel(ModelBuilder modelBuilder)
        {
#pragma warning disable 612, 618
            modelBuilder
                .HasDefaultSchema("Portfolio")
                .HasAnnotation("ProductVersion", "10.0.2")
                .HasAnnotation("Relational:MaxIdentifierLength", 63);

            NpgsqlModelBuilderExtensions.UseIdentityByDefaultColumns(modelBuilder);

            modelBuilder.Entity("Project.Common.Infrastructure.Inbox.InboxMessage", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid")
                        .HasColumnName("id");

                    b.Property<string>("Content")
                        .IsRequired()
                        .HasMaxLength(2000)
                        .HasColumnType("jsonb")
                        .HasColumnName("content");

                    b.Property<string>("Error")
                        .HasColumnType("text")
                        .HasColumnName("error");

                    b.Property<DateTime>("OccurredOnUtc")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("occurred_on_utc");

                    b.Property<DateTime?>("ProcessedOnUtc")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("processed_on_utc");

                    b.Property<string>("Type")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("type");

                    b.HasKey("Id")
                        .HasName("pk_inbox_messages");

                    b.HasIndex("ProcessedOnUtc", "OccurredOnUtc")
                        .HasDatabaseName("ix_inbox_messages_processed_on_utc_occurred_on_utc");

                    b.ToTable("inbox_messages", "Portfolio");
                });

            modelBuilder.Entity("Project.Common.Infrastructure.Inbox.InboxMessageConsumer", b =>
                {
                    b.Property<Guid>("InboxMessageId")
                        .HasColumnType("uuid")
                        .HasColumnName("inbox_message_id");

                    b.Property<string>("Name")
                        .HasMaxLength(500)
                        .HasColumnType("character varying(500)")
                        .HasColumnName("name");

                    b.HasKey("InboxMessageId", "Name")
                        .HasName("pk_inbox_message_consumers");

                    b.ToTable("inbox_message_consumers", "Portfolio");
                });

            modelBuilder.Entity("Project.Common.Infrastructure.Outbox.OutboxMessage", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid")
                        .HasColumnName("id");

                    b.Property<string>("Content")
                        .IsRequired()
                        .HasMaxLength(2000)
                        .HasColumnType("jsonb")
                        .HasColumnName("content");

                    b.Property<string>("Error")
                        .HasColumnType("text")
                        .HasColumnName("error");

                    b.Property<DateTime>("OccurredOnUtc")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("occurred_on_utc");

                    b.Property<DateTime?>("ProcessedOnUtc")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("processed_on_utc");

                    b.Property<string>("Type")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("type");

                    b.HasKey("Id")
                        .HasName("pk_outbox_messages");

                    b.HasIndex("OccurredOnUtc", "ProcessedOnUtc")
                        .HasDatabaseName("idx_outbox_messages_unprocessed")
                        .HasFilter("processed_on_utc IS NULL");

                    b.ToTable("outbox_messages", "Portfolio");
                });

            modelBuilder.Entity("Project.Common.Infrastructure.Outbox.OutboxMessageConsumer", b =>
                {
                    b.Property<Guid>("OutboxMessageId")
                        .HasColumnType("uuid")
                        .HasColumnName("outbox_message_id");

                    b.Property<string>("Name")
                        .HasMaxLength(500)
                        .HasColumnType("character varying(500)")
                        .HasColumnName("name");

                    b.HasKey("OutboxMessageId", "Name")
                        .HasName("pk_outbox_message_consumers");

                    b.ToTable("outbox_message_consumers", "Portfolio");
                });

            modelBuilder.Entity("Project.Modules.Portfolio.Domain.Goals.Goal", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid")
                        .HasColumnName("id");

                    b.Property<DateTime>("CreatedAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("created_at");

                    b.Property<int>("HorizonYears")
                        .HasColumnType("integer")
                        .HasColumnName("horizon_years");

                    b.Property<string>("Type")
                        .IsRequired()
                        .HasMaxLength(50)
                        .HasColumnType("character varying(50)")
                        .HasColumnName("type");

                    b.Property<DateTime?>("UpdatedAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("updated_at");

                    b.Property<Guid>("UserId")
                        .HasColumnType("uuid")
                        .HasColumnName("user_id");

                    b.HasKey("Id")
                        .HasName("pk_goals");

                    b.HasIndex("UserId")
                        .HasDatabaseName("ix_goals_user_id");

                    b.ToTable("goals", "Portfolio");
                });

            modelBuilder.Entity("Project.Modules.Portfolio.Domain.Goals.InvestorProfile", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid")
                        .HasColumnName("id");

                    b.Property<int>("Capacity")
                        .HasColumnType("integer")
                        .HasColumnName("capacity");

                    b.Property<DateTime>("CreatedAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("created_at");

                    b.Property<int>("EffectiveRisk")
                        .HasColumnType("integer")
                        .HasColumnName("effective_risk");

                    b.Property<string>("Engagement")
                        .IsRequired()
                        .HasMaxLength(20)
                        .HasColumnType("character varying(20)")
                        .HasColumnName("engagement");

                    b.Property<Guid>("GoalId")
                        .HasColumnType("uuid")
                        .HasColumnName("goal_id");

                    b.Property<Guid>("QuestionnaireResponseId")
                        .HasColumnType("uuid")
                        .HasColumnName("questionnaire_response_id");

                    b.Property<string>("RiskBand")
                        .IsRequired()
                        .HasMaxLength(20)
                        .HasColumnType("character varying(20)")
                        .HasColumnName("risk_band");

                    b.Property<string>("ScoringVersion")
                        .IsRequired()
                        .HasMaxLength(20)
                        .HasColumnType("character varying(20)")
                        .HasColumnName("scoring_version");

                    b.Property<bool>("SpeculativeUnlocked")
                        .HasColumnType("boolean")
                        .HasColumnName("speculative_unlocked");

                    b.Property<int>("Tolerance")
                        .HasColumnType("integer")
                        .HasColumnName("tolerance");

                    b.Property<string>("UsdComfort")
                        .IsRequired()
                        .HasMaxLength(20)
                        .HasColumnType("character varying(20)")
                        .HasColumnName("usd_comfort");

                    b.Property<int>("Version")
                        .HasColumnType("integer")
                        .HasColumnName("version");

                    b.HasKey("Id")
                        .HasName("pk_investor_profiles");

                    b.HasIndex("QuestionnaireResponseId")
                        .HasDatabaseName("ix_investor_profiles_questionnaire_response_id");

                    b.HasIndex("GoalId", "Version")
                        .IsUnique()
                        .HasDatabaseName("ix_investor_profiles_goal_id_version");

                    b.ToTable("investor_profiles", "Portfolio");
                });

            modelBuilder.Entity("Project.Modules.Portfolio.Domain.Goals.QuestionnaireResponse", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid")
                        .HasColumnName("id");

                    b.Property<string>("AnswersJson")
                        .IsRequired()
                        .HasColumnType("jsonb")
                        .HasColumnName("answers_json");

                    b.Property<Guid>("GoalId")
                        .HasColumnType("uuid")
                        .HasColumnName("goal_id");

                    b.Property<string>("ScoringVersion")
                        .IsRequired()
                        .HasMaxLength(20)
                        .HasColumnType("character varying(20)")
                        .HasColumnName("scoring_version");

                    b.Property<DateTime>("SubmittedAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("submitted_at");

                    b.HasKey("Id")
                        .HasName("pk_questionnaire_responses");

                    b.HasIndex("GoalId")
                        .HasDatabaseName("ix_questionnaire_responses_goal_id");

                    b.ToTable("questionnaire_responses", "Portfolio");
                });

            modelBuilder.Entity("Project.Modules.Portfolio.Domain.Instruments.Instrument", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid")
                        .HasColumnName("id");

                    b.Property<string>("AssetClass")
                        .IsRequired()
                        .HasMaxLength(20)
                        .HasColumnType("character varying(20)")
                        .HasColumnName("asset_class");

                    b.Property<double?>("AvgDailyValueTraded")
                        .HasColumnType("double precision")
                        .HasColumnName("avg_daily_value_traded");

                    b.Property<DateTime>("CreatedAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("created_at");

                    b.Property<string>("Currency")
                        .IsRequired()
                        .HasMaxLength(3)
                        .HasColumnType("character varying(3)")
                        .HasColumnName("currency");

                    b.Property<bool>("IsActive")
                        .HasColumnType("boolean")
                        .HasColumnName("is_active");

                    b.Property<double?>("LastClose")
                        .HasColumnType("double precision")
                        .HasColumnName("last_close");

                    b.Property<string>("Market")
                        .IsRequired()
                        .HasMaxLength(10)
                        .HasColumnType("character varying(10)")
                        .HasColumnName("market");

                    b.Property<string>("MetadataJson")
                        .HasColumnType("jsonb")
                        .HasColumnName("metadata_json");

                    b.Property<double?>("RealizedVol1Y")
                        .HasColumnType("double precision")
                        .HasColumnName("realized_vol1y");

                    b.Property<string>("Sector")
                        .HasMaxLength(100)
                        .HasColumnType("character varying(100)")
                        .HasColumnName("sector");

                    b.Property<DateTime?>("StatsAsOf")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("stats_as_of");

                    b.PrimitiveCollection<List<string>>("SuitableFor")
                        .IsRequired()
                        .HasColumnType("text[]")
                        .HasColumnName("suitable_for");

                    b.Property<string>("Symbol")
                        .IsRequired()
                        .HasMaxLength(20)
                        .HasColumnType("character varying(20)")
                        .HasColumnName("symbol");

                    b.Property<string>("Type")
                        .IsRequired()
                        .HasMaxLength(20)
                        .HasColumnType("character varying(20)")
                        .HasColumnName("type");

                    b.Property<DateTime?>("UpdatedAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("updated_at");

                    b.HasKey("Id")
                        .HasName("pk_instruments");

                    b.HasIndex("Market", "Symbol")
                        .IsUnique()
                        .HasDatabaseName("ix_instruments_market_symbol");

                    b.ToTable("instruments", "Portfolio");
                });

            modelBuilder.Entity("Project.Modules.Portfolio.Domain.Portfolios.Portfolio", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid")
                        .HasColumnName("id");

                    b.Property<int>("BondsPercentage")
                        .HasColumnType("integer")
                        .HasColumnName("bonds_percentage");

                    b.Property<int>("CashPercentage")
                        .HasColumnType("integer")
                        .HasColumnName("cash_percentage");

                    b.Property<DateTime>("CreatedAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("created_at");

                    b.Property<int>("EtfsPercentage")
                        .HasColumnType("integer")
                        .HasColumnName("etfs_percentage");

                    b.Property<decimal>("InvestmentAmount")
                        .HasPrecision(18, 2)
                        .HasColumnType("numeric(18,2)")
                        .HasColumnName("investment_amount");

                    b.Property<string>("InvestmentExperience")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("investment_experience");

                    b.Property<string>("MarketReaction")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("market_reaction");

                    b.Property<string>("PrimaryGoal")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("primary_goal");

                    b.Property<int>("RiskProfile")
                        .HasColumnType("integer")
                        .HasColumnName("risk_profile");

                    b.Property<int>("RiskTolerance")
                        .HasColumnType("integer")
                        .HasColumnName("risk_tolerance");

                    b.Property<int>("StocksPercentage")
                        .HasColumnType("integer")
                        .HasColumnName("stocks_percentage");

                    b.Property<string>("TimeHorizon")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("time_horizon");

                    b.Property<DateTime?>("UpdatedAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("updated_at");

                    b.Property<Guid>("UserId")
                        .HasColumnType("uuid")
                        .HasColumnName("user_id");

                    b.HasKey("Id")
                        .HasName("pk_portfolios");

                    b.HasIndex("UserId")
                        .IsUnique()
                        .HasDatabaseName("ix_portfolios_user_id");

                    b.ToTable("portfolios", "Portfolio");
                });

            modelBuilder.Entity("Project.Modules.Portfolio.Domain.Strategies.StrategyTemplate", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid")
                        .HasColumnName("id");

                    b.Property<string>("BucketsJson")
                        .IsRequired()
                        .HasColumnType("jsonb")
                        .HasColumnName("buckets_json");

                    b.Property<DateTime>("CreatedAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("created_at");

                    b.Property<double>("DrawdownAlertPct")
                        .HasColumnType("double precision")
                        .HasColumnName("drawdown_alert_pct");

                    b.PrimitiveCollection<List<string>>("GoalTypes")
                        .IsRequired()
                        .HasColumnType("text[]")
                        .HasColumnName("goal_types");

                    b.Property<bool>("IsActive")
                        .HasColumnType("boolean")
                        .HasColumnName("is_active");

                    b.Property<string>("Key")
                        .IsRequired()
                        .HasMaxLength(50)
                        .HasColumnType("character varying(50)")
                        .HasColumnName("key");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasMaxLength(100)
                        .HasColumnType("character varying(100)")
                        .HasColumnName("name");

                    b.Property<string>("RebalanceCadence")
                        .IsRequired()
                        .HasMaxLength(20)
                        .HasColumnType("character varying(20)")
                        .HasColumnName("rebalance_cadence");

                    b.Property<bool>("RequiresSpeculativeUnlock")
                        .HasColumnType("boolean")
                        .HasColumnName("requires_speculative_unlock");

                    b.Property<int>("RiskMax")
                        .HasColumnType("integer")
                        .HasColumnName("risk_max");

                    b.Property<int>("RiskMin")
                        .HasColumnType("integer")
                        .HasColumnName("risk_min");

                    b.HasKey("Id")
                        .HasName("pk_strategy_templates");

                    b.HasIndex("Key")
                        .IsUnique()
                        .HasDatabaseName("ix_strategy_templates_key");

                    b.ToTable("strategy_templates", "Portfolio");
                });

            modelBuilder.Entity("Project.Modules.Portfolio.Domain.Goals.InvestorProfile", b =>
                {
                    b.HasOne("Project.Modules.Portfolio.Domain.Goals.Goal", null)
                        .WithMany()
                        .HasForeignKey("GoalId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired()
                        .HasConstraintName("fk_investor_profiles_goals_goal_id");

                    b.HasOne("Project.Modules.Portfolio.Domain.Goals.QuestionnaireResponse", null)
                        .WithMany()
                        .HasForeignKey("QuestionnaireResponseId")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired()
                        .HasConstraintName("fk_investor_profiles_questionnaire_responses_questionnaire_res");
                });

            modelBuilder.Entity("Project.Modules.Portfolio.Domain.Goals.QuestionnaireResponse", b =>
                {
                    b.HasOne("Project.Modules.Portfolio.Domain.Goals.Goal", null)
                        .WithMany()
                        .HasForeignKey("GoalId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired()
                        .HasConstraintName("fk_questionnaire_responses_goals_goal_id");
                });
#pragma warning restore 612, 618
        }
    }
}
